--- a/js1/index.html
+++ b/js1/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>hello rejoice</h1>
+    <h1 id="demo" style="color: green;"></h1>
+    <h1 id="demont" style="color: red;"></h1>
+    <h1 id="addition" style="color:blue;"></h1>
 </body>
 <script src="index.js"></script>
 </html>
