--- a/js1/index.html
+++ b/js1/index.html
@@ -6,8 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello rejoice</h1>
-    <p>hhh</p>
+    <h1 id="xgf" class="ok"  >hello rejoice</h1>
+    <p >hhh</p>
+    <span>hhhhhhhhhhhhhhhhhhhh</span>
+    <h1 id="demo"></h1>
+    <h1 id="demonot"></h1>
+    <h1 id="demonot1"></h1>
+    <style>
+        #demo{
+            color: green;
+        }
+        #demonot{
+            color: blue;
+        }
+        #demonot1{
+            color: red;
+        }
+    </style>
 </body>
 <script src="index.js"></script>
 </html>
