--- a/js1/index.html
+++ b/js1/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1 id="xgf" class="ok"   >hello rejoice</h1>
-    <p >hhh</p>
-    <span>hhhhhhhhhhhhhhhhhhhh</span>
     <h1 id="demo"></h1>
     <h1 id="demonot"></h1>
     <h1 id="demonot1"></h1>
+    <h2 id="input"></h2>
+    <input type="text" placeholder="enter youer user name : "  onchange="test(event)"/>
     <style>
         #demo{
             color: green;
