--- a/js1/index.html
+++ b/js1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="rock-paper-sissor.html"> rock-paper-sissor game</a>
     <h1 id="xgf" class="ok"   >hello rejoice</h1>
     <h1 id="demo"></h1>
     <h1 id="demonot"></h1>
