--- a/js1/index.html
+++ b/js1/index.html
@@ -10,6 +10,7 @@
     <h1 id="demo"></h1>
     <h1 id="demonot"></h1>
     <h1 id="demonot1"></h1>
+    <h2 id="promt"></h2>
     <h2 id="input"></h2>
     <input type="text" placeholder="enter youer user name : "  onchange="test(event)"/>
     <style>
@@ -21,6 +22,17 @@
         }
         #demonot1{
             color: red;
+        }
+        #promt{
+            color: purple;
+            font-size: 50px;
+            font-family: 'Times New Roman', Times, serif;
+            font-style: italic;
+            font-weight: 800;
+            margin: 0 auto;
+            padding: 0;
+            width: 100%;
+            /* text-align: center; */
         }
     </style>
 </body>
